fdo#77718: Picture inside SmartArt changes after RT

- The image data stream for the targets of relId's were getting overwritten,
 therefore the data was getting loss.
- Added anchor id as part of computing a unique name for images.
- Added UT for the same.

Change-Id: I999ba1b3701ef357641dd0365403a5d7ad8d18aa